# Zero_trust_simulator

./: Practicum CA 1.docx  Practicum_CA_2_Manikanta 22.docx  README.md
my-zta-project/: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt  run_experiment.sh  setup.py
my-zta-project/.github/workflows/: ci.yml
my-zta-project/analysis/notebooks/: analyze_experiment.ipynb
my-zta-project/analysis/scripts/: analyze_results.py  generate_report.py
my-zta-project/configs/: attack_config.json  attack_test.json  sample_experiment.json  sim_config.json  usability_config.json  usability_test.json
my-zta-project/data/: attack_cred.jsonl  attack_test.jsonl  sample_logs.jsonl  test.jsonl  test_baseline.jsonl  test_zta.jsonl  usability_test.csv  verify_baseline.jsonl
my-zta-project/docs/: plan.md  verification.md
my-zta-project/infra/: Dockerfile  docker-compose.yml
my-zta-project/reports/: summary.md
my-zta-project/scripts/: verify_project.py
my-zta-project/src/controls/: auth.py  posture.py  segmentation.py
my-zta-project/src/logging/: central_logger.py
my-zta-project/src/sim/: attacks.py  experiment.py  run_sim.py  usability.py  usability_metrics.py
my-zta-project/src/utils/: config.py
my-zta-project/tests/: conftest.py  test_analyze.py  test_attacks.py  test_central_logger.py  test_controls.py  test_docker.py  test_experiment.py  test_run_sim.py  test_usability.py  test_usability_metrics.py
