[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zta-sim"
version = "0.1.0"
description = "Zero Trust Architecture Simulator"
authors = [{name = "ZTA Simulator Contributors"}]
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
